# trifecta-guard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/workflows/: ci.yml
config/: policy.json
docs/: ARCHZOS_AGENT_ARCHITECTURE_CONTEXT.md  RESEARCH_NOTES.md
examples/: langgraph_example.py
tests/: test_cli.py  test_policy.py  test_taint_engine.py
trifecta_guard/: __init__.py  cli.py  dashboard.py  middleware.py  models.py  policy.py  taint_engine.py  telemetry.py
trifecta_guard/adapters/: __init__.py  langgraph.py  mcp.py
