[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trifecta-guard"
version = "0.1.0"
description = "Runtime security linter for blocking lethal prompt-injection capability chains."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ArchzOS" }]
dependencies = [
  "pydantic>=2.8,<3",
]

[project.scripts]
trifecta-guard = "trifecta_guard.cli:main"

[project.optional-dependencies]
dashboard = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
]
telemetry = [
  "opentelemetry-api>=1.27,<2",
]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["trifecta_guard*"]
